# pysparktest

./: README.md  pyproject.toml
src/pysparktest/: __init__.py  migrations.py  spark_suite.py
tests/: conftest.py  test_example.py
tests/migrations/my_db/: v00__create_my_db.sql  v01__create_my_table.sql
